# wingfoot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/botpass/: __init__.py  cli.py  directory.py  doctor.py  http.py  integrations.py  keys.py
src/wingfoot/: __init__.py  cli.py  directory.py  doctor.py  http.py  integrations.py  keys.py  register.py  rfc9421.py  verifier.py
tests/: test_cli.py  test_directory.py  test_directory_signing.py  test_http.py  test_integrations.py  test_keys.py  test_packaging.py  test_register.py  test_rfc9421.py  test_verifier.py
